# radar-range-perf

./: .gitignore  AGENTS.md  Makefile  README.md  pre_commit.py  pyproject.toml
.github/workflows/: ci.yml
archive/radar-range-tools/: README.md  pyproject.toml  setup.cfg
archive/radar-range-tools/examples/: coverage_grid.py  ddma_combining_variants.py  range_sweep.py
archive/radar-range-tools/src/radar_range/: __init__.py  antennas.py  constants.py  coverage.py  detection.py  environment.py  equation.py  hardware.py  plotting.py  presets.py  processing.py  target.py  types.py  units.py  waveform.py
archive/radar-range-tools/tests/: test_antennas.py  test_detection.py  test_equation.py  test_processing.py  test_units.py
archive/radarperf/: .flake8  README.md  pyproject.toml
archive/radarperf/examples/: basic_link_budget.py  ddma_combinations.py
archive/radarperf/radarperf/: engine.py  geometry.py  processing.py  protocols.py  sweeps.py
archive/radarperf/tests/: test_engine.py  test_units.py
examples/: antenna_pattern.py  basic_link_budget.py  ddma_combinations.py  pd_vs_range.py  plotting_demo.py
radarperf/: __init__.py  antenna.py  detection.py  engine.py  environment.py  frontend.py  geometry.py  plotting.py  processing.py  protocols.py  results.py  sweeps.py  target.py  trajectory.py  units.py  waveform.py
radarperf/data/: sencity_farad_iv.csv  sencity_this_ii.csv
studies/: README.md
studies/2026-06-22_config-comparison/: config_comparison.py
tests/: conftest.py  test_acquisition.py  test_antenna.py  test_combination.py  test_detection.py  test_engine.py  test_frontend.py  test_noise.py  test_plotting.py  test_processing.py  test_staged_processing.py  test_sweeps.py
