[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radarperf"
version = "0.1.0"
description = "Range-performance toolbox for 77 GHz FMCW (MIMO) radar"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["mypy", "black", "flake8", "pytest"]

[tool.setuptools.packages.find]
include = ["radarperf*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
disallow_any_generics = true

[[tool.mypy.overrides]]
module = ["scipy.*"]
ignore_missing_imports = true
